Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
7.0.0
Description
Example in Python:
>>> pa.compute.add_checked(pa.array([2**62], type=pa.duration('ms')), pa.array([2**62], type=pa.duration('ms'))) <pyarrow.lib.DurationArray object at 0x7f1539465b80> [ -9223372036854775808 ]
The same computation with plain integers correctly raises an error:
>>> pa.compute.add_checked(pa.array([2**62], type=pa.int64()), pa.array([2**62], type=pa.int64())) Traceback (most recent call last): [...] ArrowInvalid: overflow
Attachments
Issue Links
- links to