ARROW-15688: [C++] add_checked doesn't error out on duration overflow

This is to resolve [ARROW-15688](https://issues.apache.org/jira/browse/ARROW-15688).

Closes #12438 from rok/ARROW-15688

Authored-by: Rok <rok@mihevc.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>